# quicksort

./: CMakeLists.txt  main.cpp  parallel_quick_sort.h  quicksort.cpp
Tests/: CMakeLists.txt  SortTests.cpp
